--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,3 @@
-MONGO_CONNECTION_URL = mongodb+srv://dbUser:dbuser123@cluster0.mv1jq9t.mongodb.net/dbUser?retryWrites=true&w=majority&appName=Cluster0
-
-APP_BASE_URL = http://localhost:3000
-
-
-JWT_SECRET_KEY = "Abhavya@123"
+MONGO_CONNECTION_URL=mongodb+srv://sharing-app:SharingApp@cluster0.mv1jq9t.mongodb.net/sharing-app?retryWrites=true&w=majority
+APP_BASE_URL=http://localhost:3000
+JWT_SECRET_KEY=Abhavya@123
